# coverage-rich

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
coverage_rich/: __about__.py  __main__.py  config.py  report.py
coverage_rich/cli/: __init__.py  app.py  common.py  config.py  report.py  tui.py
coverage_rich/tui/: app.py
tests/: test_report.py
